// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-form-field-textarea #render should render component as expected when an optional "error" slot is provided 1`] = `
<gux-form-field-textarea>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined gux-input-error">
          <slot name="input">
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error gux-show">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <textarea slot="input" id="gux-form-field-input-i" aria-invalid="true" aria-describedby="gux-form-field-error-i">
  </textarea>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
  <span slot="error" id="gux-form-field-error-i">
    This is an error message
  </span>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render should render component as expected when an optional "help" slot is provided 1`] = `
<gux-form-field-textarea>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input">
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <textarea slot="input" id="gux-form-field-input-i" aria-describedby="gux-form-field-help-i">
  </textarea>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
  <span slot="help" id="gux-form-field-help-i">
    This is a help message
  </span>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render should render component as expected when an optional "label-info" slot is provided 1`] = `
<gux-form-field-textarea>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input">
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <textarea slot="input" id="gux-form-field-input-i" aria-describedby="gux-label-info-beta-i">
  </textarea>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
  <gux-label-info-beta slot="label-info" id="gux-label-info-beta-i">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render should render component as expected when indicator-mark is "optional" 1`] = `
<gux-form-field-textarea indicator-mark="optional">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="optional">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input">
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <textarea slot="input" id="gux-form-field-input-i">
  </textarea>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render should render component as expected when indicator-mark is "required" 1`] = `
<gux-form-field-textarea indicator-mark="required">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input">
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <textarea slot="input" id="gux-form-field-input-i">
  </textarea>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render should render component as expected when input attribute is "disabled" 1`] = `
<gux-form-field-textarea>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input">
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <textarea slot="input" disabled="" id="gux-form-field-input-i">
  </textarea>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render should render component as expected when input attribute is "required" 1`] = `
<gux-form-field-textarea>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input">
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <textarea slot="input" required="" id="gux-form-field-input-i">
  </textarea>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render should render component as expected when label-position is above 1`] = `
<gux-form-field-textarea label-position="above">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input">
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <textarea slot="input" id="gux-form-field-input-i">
  </textarea>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render should render component as expected when label-position is beside 1`] = `
<gux-form-field-textarea label-position="beside">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-beside">
      <div class="gux-form-field-label gux-beside">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input">
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <textarea slot="input" id="gux-form-field-input-i">
  </textarea>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render should render component as expected when label-position is screenreader 1`] = `
<gux-form-field-textarea label-position="screenreader">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-screenreader">
      <div class="gux-form-field-label gux-screenreader">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input">
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <textarea slot="input" id="gux-form-field-input-i">
  </textarea>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render should render component as expected when resize is auto 1`] = `
<gux-form-field-textarea resize="auto">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-auto" data-replicated-value="undefined">
          <slot name="input">
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <textarea slot="input" id="gux-form-field-input-i">
  </textarea>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render should render component as expected when resize is manual 1`] = `
<gux-form-field-textarea resize="manual">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-manual">
          <slot name="input">
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <textarea slot="input" id="gux-form-field-input-i">
  </textarea>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render should render component as expected when resize is none 1`] = `
<gux-form-field-textarea resize="none">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-none">
          <slot name="input">
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <textarea slot="input" id="gux-form-field-input-i">
  </textarea>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-textarea>
`;
